fix typos in ej extra 7 guia 2

--- a/2-guia/ejercicios-2-extra/ej-extra-7-2.tex
+++ b/2-guia/ejercicios-2-extra/ej-extra-7-2.tex
@@ -33,7 +33,7 @@ $$
 $$
 también lo sea.
 
-Empenzando con $p(k+1)$. Acomodamos y vemos de hacer aparecer la \purple{hipótesis inductiva}:
+Empezando con $p(k+1)$. Acomodamos y vemos de hacer aparecer la \purple{hipótesis inductiva}:
 $$
   \begin{array}{rcl}
     \sumatoria{i=1}{\blue{k+1}}(\blue{k+1}-i)2^{i-1} & \igual{\red{!!}}           & \sumatoria{i=1}{k}(k-i)2^{i-1} + \sumatoria{i=1}{k} 2^{i-1} + 0 \\
@@ -42,7 +42,7 @@ $$
 $$
 En el \red{!!} saqué el término $k+1$ y después agrupé de manera conveniente para separar las sumatorias. Nos queda ahora esa sumatoria que no es
 otra cosa que una querida y odiada \textit{serie geométrica}, esa que no te acordás, que si empieza en 0 o en 1,
-pero \hyperlink{2-teoria:geometrica}{acá tenés la fórmulita y coso en la teoría}.
+pero \hyperlink{2-teoria:geometrica}{acá tenés la formulita y coso en la teoría}.
 $$
   \sumatoria{i=1}{k} 2^{i-1} \igual{\red{!}}
   \frac{1}{2} \cdot \sumatoria{i=1}{k} 2^i =
@@ -61,7 +61,6 @@ Por lo tanto $p(k+1)$ también es verdadera.
 \bigskip
 
 Se demostró que $p(1), p(k) \ytext p(k+1)$ son verdaderas y por el principio de inducción $p(n)$ también lo es $\paratodo n \en \naturales$.
-
 
 \begin{aportes}
   \item \aporte{https://github.com/nad-garraz}{Nad Garraz \github}
