fix continuidad en ej 8 guia 2

--- a/2-guia/ejercicios-2/ej-8-2.tex
+++ b/2-guia/ejercicios-2/ej-8-2.tex
@@ -53,8 +53,8 @@ En el \red{!!} hice un factor común y en el \red{!} el truquito de separar un t
 Acomodo la expresión:
 $$
   \igual{$\llamada1$}
-  \blue{b} \cdot (a - b) \sumatoria{i = 1}{\blue{k+1}} a^{i-1} \cdot b^{\blue{k} - i} +
-  (a^{k+1}b^2 - a^k b^2)
+  \blue{b} \cdot (a - b) \sumatoria{i = 1}{k} a^{i-1} \cdot b^{\blue{k} - i} +
+  (a^{k+1} - a^k b)
   \igual{\purple{HI}}
   \blue{b} \cdot (\purple{a^k - b^k}) + (a^{k+1} - a^k b) = a^{k+1} - b^{k+1}
 $$
