fix typo ej 8 guia 2

--- a/2-guia/ejercicios-2/ej-8-2.tex
+++ b/2-guia/ejercicios-2/ej-8-2.tex
@@ -63,7 +63,7 @@ Por lo que $p(k+1)$ es verdadero.
 
 \bigskip
 
-Como $p(1), p(k) \ytext p(k+1)$ resultaron verdaderas, porque principio de inducción $p(n)$ también lo
+Como $p(1), p(k) \ytext p(k+1)$ resultaron verdaderas, por el principio de inducción $p(n)$ también lo
 es $\paratodo n \en \naturales$.
 
 \bigskip
