polish ej 36 guia 1

--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -318,6 +318,7 @@
 }
 
 %%% Emoticones
+\def\atencion{\faIcon{exclamation-triangle}\xspace}
 \def\meh{\faIcon[regular]{meh}\xspace}
 \def\mehBlank{\faIcon[regular]{meh-blank}\xspace}
 \def\rollingEyes{\faIcon[regular]{meh-rolling-eyes}\xspace}
