--- a/1-guia/ejercicios-1/ej-32-1.tex
+++ b/1-guia/ejercicios-1/ej-32-1.tex
@@ -1,3 +1,17 @@
 \begin{enunciado}{\ejercicio}
-\hacer
+  Hallar $f \circ g$ y $g \circ f$ (cuando sea posible) en los casos
+  \begin{enumerate}[label=\roman*)]
+    \item $f : \reales \to \reales,\, f(x) = 2x^2 - 18 \ytext g: \reales \to \reales,\, g(x) = x + 3.$
+    \item $f : \naturales \to \naturales,\, f(n) =
+            \llave{ll}{
+              n - 2 & \text{si $n$ es divisible por 4}\\
+              n + 1 & \text{si $n$ no es divisible por 4}
+            }
+            \ytext g: \naturales \to \naturales,\, g(n) = 4n.
+          $
+
+  \item $f : \reales \to \reales \times \reales, \, f(x) = (x + 5, 3x) \ytext g: \naturales \to \reales,\, g(n) = \sqrt{n}$.
+  \end{enumerate}
 \end{enunciado}
+
+\hacer
