--- a/1-guia/ejercicios-1/ej-33-1.tex
+++ b/1-guia/ejercicios-1/ej-33-1.tex
@@ -1,3 +1,6 @@
 \begin{enunciado}{\ejercicio}
-\hacer
+  Hallar dos funciones $f : \naturales \to \naturales$ \ytext $g : \naturales \to \naturales$ tales que $f \circ g = \text{id}_{\naturales}
+    \ytext g \circ f \distinto \text{id}_{\naturales}$, donde $\text{id}_{\naturales}: \naturales \to \naturales$ denota la función identidad del
+  conjunto $\naturales$.
 \end{enunciado}
+\hacer
