--- a/1-guia/ejercicios-1/ej-34-1.tex
+++ b/1-guia/ejercicios-1/ej-34-1.tex
@@ -1,3 +1,12 @@
 \begin{enunciado}{\ejercicio}
-\hacer
+  Sean $A, B \ytext C$ conjuntos. Probar que si $f: B \to C$ y $g: A \to B$ son funciones entonces valen
+  \begin{enumerate}[label=\roman*), itemsep = -5pt]
+    \item si $f \circ g$ es inyectiva entonces $g$ es inyectiva.
+    \item si $f \circ g$ es sobreyectiva entonces $f$ es sobreyectiva.
+    \item si $f \ytext g$ son inyectivas entonces $f \circ g$ es inyectiva.
+    \item si $f \ytext g$ son sobreyectivas entonces $f \circ g$ es sobreyectiva.
+    \item si $f \ytext g$ son biyectivas entonces $f \circ g$ es biyectiva.
+  \end{enumerate}
 \end{enunciado}
+
+\hacer
