--- a/3-guia/ejercicios-3/ej-15-3.tex
+++ b/3-guia/ejercicios-3/ej-15-3.tex
@@ -1,57 +1,57 @@
 \begin{enunciado}{\ejercicio}
-	Sea $A = \set{f : \set{1,2,3,4} \to \set{1,2,3,4,5,6,7,8}} \text{ tal que $f$ es una función inyectiva}.$
+  Sea $A = \set{f : \set{1,2,3,4} \to \set{1,2,3,4,5,6,7,8}} \text{ tal que $f$ es una función inyectiva}.$
 
-	Sea $\relacion$ la relación de equivalencia en $A$ definida por: $f \relacion g \sisolosi f(1) + f(2) = g(1) + g(2)$.
+  Sea $\relacion$ la relación de equivalencia en $A$ definida por: $f \relacion g \sisolosi f(1) + f(2) = g(1) + g(2)$.
 
-	Sea $f \en A$ la función definida por $f(n) = n+2$ ¿Cuántos elementos tiene su clase de equivalencia?
+  Sea $f \en A$ la función definida por $f(n) = n+2$ ¿Cuántos elementos tiene su clase de equivalencia?
 \end{enunciado}
 
 Las funciónes $f \en A$ del enunciado tiene solo cuatro valores en su $\dom(f)$ y tiene 8 elementos en el $\cod(f)$.
 Me dan una $f(\blue{n})$ es específica:
 $$
-	f(\blue{n}) = \blue{n} + 2
-	\entonces
-	\llave{rcl}{
-		f(\blue{1}) & = & \blue{1} + 2 = 3 \\
-		f(\blue{2}) & = & \blue{2} + 2  = 4 \\
-		f(\blue{3}) & = & \blue{3} + 2 = 5  \\
-		f(\blue{4}) & = & \blue{4}+ 2 = 6
-	}
+  f(\blue{n}) = \blue{n} + 2
+  \entonces
+  \llave{rcl}{
+    f(\blue{1}) & = & \blue{1} + 2 = 3 \\
+    f(\blue{2}) & = & \blue{2} + 2  = 4 \\
+    f(\blue{3}) & = & \blue{3} + 2 = 5  \\
+    f(\blue{4}) & = & \blue{4}+ 2 = 6
+  }
 $$
 La cual se relacionará según $\relacion$ con otra funciones $g(n)$ del conjunto $A$ siempre que $g(1) + g(2) = 7$.
 Formas de que $g(1) + g(2) = 7$ puede contarse a mano:
 $$
-	\llave{l}{
-		\green{g(1)} + \purple{g(2)} = \green{1} + \purple{6} = 7\\
-		\green{g(1)} + \purple{g(2)} = \green{2} + \purple{5} = 7\\
-		\green{g(1)} + \purple{g(2)} = \green{3} + \purple{4} = 7\\
-		\green{g(1)} + \purple{g(2)} = \green{4} + \purple{3} = 7\\
-		\green{g(1)} + \purple{g(2)} = \green{5} + \purple{2} = 7\\
-		\green{g(1)} + \purple{g(2)} = \green{6} + \purple{1} = 7
-	}
+  \llave{l}{
+    \green{g(1)} + \purple{g(2)} = \green{1} + \purple{6} = 7\\
+    \green{g(1)} + \purple{g(2)} = \green{2} + \purple{5} = 7\\
+    \green{g(1)} + \purple{g(2)} = \green{3} + \purple{4} = 7\\
+    \green{g(1)} + \purple{g(2)} = \green{4} + \purple{3} = 7\\
+    \green{g(1)} + \purple{g(2)} = \green{5} + \purple{2} = 7\\
+    \green{g(1)} + \purple{g(2)} = \green{6} + \purple{1} = 7
+  }
 $$
-\underline{Un total de 6$\llamada1$ formas}. Un ejemplo de una $g$ tal que $f \relacion g$ sería:
+\underline{Un total de $6^{\llamada1}$ formas}. Un ejemplo de una $g$ tal que $f \relacion g$ sería:
 $$
-	\llave{rcl}{
-		g(1) & = & 3  \to \text{ para cumplir } \relacion\\
-		g(2) & = & 4 \to \text{ para cumplir } \relacion\\
-		g(3) & = & \set{1, 2, 5, 6, 7, 8} \ot \text{algunos de esos que sea \underline{distinto} a } \magenta{g(4)} \\
-		g(4) & = & \set{1, 2, 5, 6, 7, 8} \ot \text{algunos de esos que sea \underline{distinto} a } \magenta{g(3)}
-	}
+  \llave{rcl}{
+    g(1) & = & 3  \to \text{ para cumplir } \relacion\\
+    g(2) & = & 4 \to \text{ para cumplir } \relacion\\
+    g(3) & = & \set{1, 2, 5, 6, 7, 8} \ot \text{alguno de esos que sea \underline{distinto} a } \magenta{g(4)} \\
+    g(4) & = & \set{1, 2, 5, 6, 7, 8} \ot \text{alguno de esos que sea \underline{distinto} a } \magenta{g(3)}
+  }
 $$
 Eso último es para que la función sea inyectiva.
 Formas de elegir esos últimos 2 valores para $g(3) \ytext g(4)$:
 $$
-	6 \cdot 5 = 30 \llamada2
+  6 \cdot 5 = 30 ^{\llamada2}
 $$
 
 Así concluyendo que la cantidad de funciones $g \en A$ tales que $f \relacion g$ donde $f(n) = n + 2$ será:
 $$
-	\cajaResultado{
-		\llamada1\llamada2 \to	30 \cdot 6 = 180
-	}.
+  \cajaResultado{
+    \flecha{$\llamada1\llamada2$} 6 \cdot 30  = 180
+  }.
 $$
 
 \begin{aportes}
-	\item \aporte{\dirRepo}{naD GarRaz \github}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
 \end{aportes}
