fix typo ej 16 guia 2

--- a/2-guia/ejercicios-2/ej-16-2.tex
+++ b/2-guia/ejercicios-2/ej-16-2.tex
@@ -18,7 +18,7 @@
           a_1     & = 1                                              \\
           a_{n+1} & = (1 + \sqrt{a_n})^2, \paratodo n \en \naturales
         \end{align}
-        Veamos si hay algún patrón entre los términos de la sucesión para poder conjeturar una formula para su termino
+        Veamos si hay algún patrón entre los términos de la sucesión para poder conjeturar una fórmula para su término
         n-ésimo
         \begin{align}
           a_2 & = (1 +\sqrt{a_1})^2 = (1 + \sqrt{1})^2 = 4 = 2^2 \nonumber  \\
@@ -28,7 +28,7 @@
           a_n & = n^2
         \end{align}
         Tenemos que probar que la sucesión dada por recurrencia satisface la sucesión que conjeturamos en la Ec.(3).
-        Hagamoslo por inducción
+        Hagámoslo por inducción
         \begin{align*}
           P(n): a_n = n^2,  n \en \naturales
         \end{align*}
@@ -64,7 +64,7 @@
           a_n & = 3^n
         \end{align*}
         Tenemos que probar que la sucesión dada por recurrencia satisface la sucesión que conjeturamos en la Ec.(3).
-        Hagamoslo por inducción
+        Hagámoslo por inducción
         \begin{align*}
           P(n): a_n = 3^n,  n \en \naturales
         \end{align*}
@@ -88,7 +88,7 @@
   \item Sea $(a_n)_{n \en \naturales }$ definida por
         \setcounter{equation}{0}
         \begin{align}
-          a_1     & = 3                                 \\
+          a_1     & = 1                                 \\
           a_{n+1} & = n a_n, \paratodo n \en \naturales
         \end{align}
 
