fix ej 16 guia 2 iii

--- a/3-guia/ejercicios-3/ej-18-3.tex
+++ b/3-guia/ejercicios-3/ej-18-3.tex
@@ -28,7 +28,7 @@
           \#C = 6
         $$
 
-        Quiero armar un conjunto con 10 elemntos. 4 de esos elementos deben ser de $C$
+        Quiero armar un conjunto con 10 elementos. 4 de esos elementos deben ser de $C$
         ¿Cuántas formas de agarrar 4 elementos de $C$ hay?:
         $$
           \binom{6}{4} \llamada1
