--- a/2-guia/ejercicios-2/ej-16-2.tex
+++ b/2-guia/ejercicios-2/ej-16-2.tex
@@ -86,46 +86,61 @@
         Hemos probado el caso base y el paso inductivo. Concluimos que $P(n):V,$ $\paratodo n \en \naturales $.
 
   \item Sea $(a_n)_{n \en \naturales }$ definida por
-        \setcounter{equation}{0}
-        \begin{align}
-          a_1     & = 1                                 \\
-          a_{n+1} & = n a_n, \paratodo n \en \naturales
-        \end{align}
+        $$
+          \begin{array}{rcl}
+            a_1     & \igual{$\llamada1$} & 1                                 \\
+            a_{n+1} & \igual{$\llamada2$} & n a_n, \paratodo n \en \naturales
+          \end{array}
+        $$
 
         Veamos si hay algún patrón entre los términos de la sucesión para poder conjeturar una formula de su termino
         n-ésimo
 
-        \begin{align}
-          a_2 & = 1 \cdot a_1 = 1 \cdot 1 \nonumber                             \\
-          a_3 & = 2 \cdot a_2 = 2 \cdot 1 \nonumber                             \\
-          a_4 & = 3 \cdot a_3 = 3 \cdot 2 = 3 \cdot 2 \cdot 1 \nonumber         \\
-          a_5 & = 4 \cdot a_4 = 4 \cdot 6 = 4 \cdot 3 \cdot 2 \nonumber \cdot 1 \\
-              & \vdotswithin{=} \nonumber                                       \\
-          a_n & = (n-1)!
-        \end{align}
-        Tenemos que probar que la sucesión dada por recurrencia satisface la sucesión que conjeturamos en la Ec.(3).
-        Hagamoslo por inducción
+        $$
+          \begin{array}{rcl}
+            a_2 & =                   & 1 \cdot a_1 = 1 \cdot 1                              \\
+            a_3 & =                   & 2 \cdot a_2 = 2 \cdot 1                              \\
+            a_4 & =                   & 3 \cdot a_3 = 3 \cdot 2 = 3 \cdot 2 \cdot 1          \\
+            a_5 & =                   & 4 \cdot a_4 = 4 \cdot 6 = 4 \cdot 3 \cdot 2  \cdot 1 \\
+                & \vdots              &                                                      \\
+            a_n & \igual{$\llamada3$} & (n-1)!
+          \end{array}
+        $$
+        Tenemos que probar que la sucesión dada por recurrencia satisface la sucesión que conjeturamos en $\llamada3$.
 
-        \begin{align*}
-          P(n): a_n = 3^n, \paratodo n \en \naturales
-        \end{align*}
+        $$
+          p(n): a_n = (n - 1)! \paratodo n \en \naturales
+        $$
 
-        \underline{Caso Base}, $n = 1$:
+        \textit{Caso Base:}
+        $$
+          p(\blue{1}): a_1 = (\blue{1} - 1)! = 0! = 1 \igual{$\llamada1$} 1
+        $$
+        por lo que $p(1)$ es verdadera.
 
-        \begin{align*}
-           & P(1): a_1 = 3^1 = 3 \igual{(1)} 3 \entonces P(1):V
-        \end{align*}
-        \underline{Paso inductivo.} Sea $n \geq 1$:
-        \begin{enumerate}
-          \item[HI.] $P(n): V$
-          \item[TI.] $P(n+1): a_{n+1} = 3^{n+1}$
-        \end{enumerate}
-        Desarrollemos el lado izquierdo de la igualdad en la TI
-        \begin{align*}
-          a_{n+1} \igual{(2)} 2 a_n + 3^n \igual{HI} 2 \cdot 3^n + 3^n = 3 \cdot 3^n = 3^{n+1}
-          \entonces P(n+1):V
-        \end{align*}
-        Hemos probado el caso base y el paso inductivo. Concluimos que $P(n):V,$ $\paratodo n \en \naturales $.
+        \medskip
+        \textit{Paso inductivo:}
+
+        Asumo que para algún $\blue{k} \en \naturales$
+        $$
+          p(\blue{k})  : \ub{a_{\blue{k}} = (\blue{k} - 1)!}{\text{\purple{hipótesis inductiva}}}
+        $$
+        es verdadera. Por lo tanto quiero probar que:
+        $$
+          p(\blue{k+1})  : a_{\blue{k + 1}} = (\blue{k + 1} - 1)!
+        $$
+        también lo es.
+
+        Está regalada: {\tiny \color{black!10!white}\textit{¡Como tu hermana!}}
+        $$
+          a_{\blue{k + 1}} = (\blue{k + 1} - 1)! = k!
+          \igual{\red{!}}
+          k \cdot (k - 1)!
+          \igual{\purple{HI}}[$\llamada2$]
+          k \cdot a_{\blue{k}}
+        $$
+
+        Como $p(1), p(k) \ytext p(k+1)$ resultaron verdaderas, por el principio de inducción $p(n)$ también lo es $\paratodo n \en \naturales$
 
   \item Sea $(a_n)_{n \en \naturales }$ definida por
         \setcounter{equation}{0}
@@ -171,4 +186,6 @@
   %% iconos : \github, \enstagram, \tiktok, \linkedin
   %\aporte{url}{nombre icono}
   \item \aporte{https://github.com/koopardo/}{Marcos Zea \github}
+  \item \aporte{\dirRepo}{nad GarRaz \github}
+  \item \aporte{https://www.instagram.com/fransureda_}{Francisco Sureda \instagram}
 \end{aportes}
