--- a/2-guia/ejercicios-2/ej-16-2.tex
+++ b/2-guia/ejercicios-2/ej-16-2.tex
@@ -138,9 +138,12 @@
           k \cdot (k - 1)!
           \igual{\purple{HI}}[$\llamada2$]
           k \cdot a_{\blue{k}}
+          \entonces a_{k+1} = k \cdot a_{\blue{k}}
         $$
+        Ese último paso es la definición de sucesión, así que dicho formal y matemáticamente
+        es más verdadero que \textit{que el agua moja}.
 
-        Como $p(1), p(k) \ytext p(k+1)$ resultaron verdaderas, por el principio de inducción $p(n)$ también lo es $\paratodo n \en \naturales$
+        Como $p(1),\, p(k) \ytext p(k+1)$ resultaron verdaderas, por el principio de inducción $p(n)$ también lo es $\paratodo n \en \naturales$
 
   \item Sea $(a_n)_{n \en \naturales }$ definida por
         \setcounter{equation}{0}
