--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -318,6 +318,10 @@
 }
 
 %%% Emoticones
+\def\poo{\faIcon{poo}\xspace}
+\def\grimaceR{\faIcon[regular]{grimace}\xspace}
+\def\grimace{\faIcon{grimace}\xspace}
+\def\angry{\faIcon[regular]{angry}\xspace}
 \def\atencion{\faIcon{exclamation-triangle}\xspace}
 \def\meh{\faIcon[regular]{meh}\xspace}
 \def\mehBlank{\faIcon[regular]{meh-blank}\xspace}
