fix typo 16 guia 2 iii

--- a/2-guia/ejercicios-2/ej-16-2.tex
+++ b/2-guia/ejercicios-2/ej-16-2.tex
@@ -140,7 +140,7 @@
           k \cdot a_{\blue{k}}
           \entonces a_{k+1} = k \cdot a_{\blue{k}}
         $$
-        Ese último paso es la definición de sucesión, así que dicho formal y matemáticamente
+        Ese último paso es la definición de la sucesión, así que dicho formal y matemáticamente
         es más verdadero que \textit{que el agua moja}.
 
         Como $p(1),\, p(k) \ytext p(k+1)$ resultaron verdaderas, por el principio de inducción $p(n)$ también lo es $\paratodo n \en \naturales$
