--- a/3-guia/ejercicios-3/ej-2-3.tex
+++ b/3-guia/ejercicios-3/ej-2-3.tex
@@ -3,6 +3,63 @@
   de 3 ni múltiplos de 5?
 \end{enunciado}
 
+Empiezo por buscar los múltiplos de 3 y 5:
+
+\textit{Múltiplos de 3:} Si $x$ es un múltiplo de 3, entonces $x = 3\blue{k}$ con $k \en \enteros$. Y si quiero que esos $x$ estén entre 1 y 1000:
+$$
+  1\leq x \leq 1000
+  \sii
+  1\leq 3\blue{k} \leq 1000
+  \sii
+  \frac{1}{3}\leq \blue{k} \leq \frac{1000}{3}
+  \Sii{$k \en \enteros$}
+  1 \leq \blue{k} \leq 333
+$$
+Eso me dice que tengo $333\llamada1$ números que son múltiplos de 3 entre 1 y 1000.
+
+Haciendo lo mismo para los mútiplos de 5 encuentro que hay un total de $200\llamada2$ números múltiplos de 5 entre 1 y 1000.
+
+Es tentador llegado este momento usar los resultados de $\llamada1$ y $\llamada2$ para decir que hay un total de
+$$
+  1000 - 333 - 200 = 467
+$$
+números que \underline{no} son múltiplo de 3 ni de 5, peeeeero eso estaría mal, porque:
+$$
+  \begin{array}{l}
+    \text{3$k$ } \to 1,2,\cyan{3},4,5,\cyan{6},7,8,\cyan{9},10,11,\cyan{12},13,14,\red{15},16,17,\cyan{18},19,20,\cyan{21},22,23,\cyan{24},25,26,\cyan{27},\cdots \\
+    \text{5$k$ } \to 1,2,3,4,\magenta{5},6,7,8,9,\magenta{10},11,12,13,14,\red{15},16,17,18,19,\magenta{20},21,22,23,24,\magenta{25},26,27,\cdots                                \\
+  \end{array}
+$$
+vamos a estar \textit{restando más números de los que debemos}, por ejemplo el \red{15}, que lo estamos restando \red{¡}2 veces\red{!} una
+como múltiplo de 3 y otra como múltiplo 5.
+
+Para corregir esa cuenta calculamos los múltiplos de 15, $x = 15\blue{k}$ y los sumamos al número de antes:
+$$
+  1\leq x \leq 1000
+  \sii
+  1\leq 15\blue{k} \leq 1000
+  \sii
+  \frac{1}{15}\leq \blue{k} \leq \frac{1000}{15}
+  \Sii{$k \en \enteros$}
+  1 \leq \blue{k} \leq 66
+$$
+Hay un total de $66 \llamada3$ números múltiplos de 15 entre 1 y 1000
+
+Ahora sí la respuesta al enunciado usando $\llamada1, \llamada2 \ytext \llamada3$:
+$$
+  \cajaResultado{
+    1000 - 333 - 200 + 66 = 533
+  }
+$$
+
+\bigskip
+
+\parrafoDestacado[\atencion]{
+Ahora viene la versión más formal. A mí no me gusta, pero funciona para darle forma a esto.
+}
+
+\bigskip
+
 Defino un conjunto referencial:
 $$
   V = \set{n \en \naturales : n \leq 1000},$$
@@ -22,7 +79,7 @@ $$
   \igual{\red{!}}
   \#(V - A^c \union B^c) = \#V - \#(A^c \union B^c)
   \igual{\red{!}}
-  \#V - [\#A^c + \#B^c - \#(A^c \inter B^c)]\llamada1
+  \#V - [\#A^c + \#B^c - \#(A^c \inter B^c)]\llamada4
 $$
 Donde
 $$
@@ -32,7 +89,7 @@ $$
     (A^c \inter B^c) = \set{n \en V : n \text{ es múltiplo de } 15}
   \end{array}
 $$
-Calculo sus cardinales:
+Calculo sus cardinales y esas barritas son la \textit{función piso}, que lo que hacen es redondear para abajo, así me queda un número entero:
 \begin{multicols}{3}
   \begin{itemize}
     \item $\#A^c = \lfloor \frac{1000}{3} \rfloor = 333$
@@ -45,7 +102,7 @@ Finalmente:
 $$
   \cajaResultado{
   \#(A \inter B)
-  \igual{$\llamada1$}
+  \igual{$\llamada4$}
   \#V - [\#A^c + \#B^c - \#(A^c \inter B^c)]
   =
   1000 - (333 + 200 - 66) = 533
