--- a/3-guia/ejercicios-3/ej-7-3.tex
+++ b/3-guia/ejercicios-3/ej-7-3.tex
@@ -11,3 +11,6 @@ Otra forma de pensarlo es que por cada libro tenemos $3$ opciones de mandarlo a 
 como tenemos 17 libros, esto es
 \[\overbrace{3 \times 3 \times \cdots \times 3}^{17\ \text{veces}} = 3^{17}\]
 
+\begin{aportes}
+  \item \aporte{https://github.com/sigfripro}{Sigfri \github}
+\end{aportes}
